// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Header /> should render component when can back 1`] = `
<header
  className="sc-bwzfXH geYBAS"
>
  <div
    className="sc-bdVaJa flBAph"
    onMouseDown={[Function]}
    onMouseUp={[Function]}
  >
    <i
      className="material-icons sc-bxivhb jrBfKJ"
      color="#fff"
      data-test="back"
      onClick={[MockFunction]}
    >
      arrow_back
    </i>
  </div>
  <h1
    className="sc-htpNat eSnwWs"
  >
    This is title
  </h1>
</header>
`;

exports[`<Header /> should render component when can not back 1`] = `
<header
  className="sc-bwzfXH ksdvTF"
>
  <h1
    className="sc-htpNat eSnwWs"
  >
    This is title
  </h1>
</header>
`;

exports[`<Header /> should render component when can search 1`] = `
<header
  className="sc-bwzfXH ksdvTF"
>
  <h1
    className="sc-htpNat eSnwWs"
  >
    This is title
  </h1>
  <div
    className="sc-bdVaJa flBAph"
    onMouseDown={[Function]}
    onMouseUp={[Function]}
  >
    <i
      className="material-icons sc-ifAKCX gnWGZx"
      color="#fff"
      data-test="search"
      onClick={[MockFunction]}
    >
      search
    </i>
  </div>
</header>
`;
